<resources>
    <string name="app_name">Smack</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_forgot">Forgot?</string>
    <string name="lbl_register">Register?</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_send">send</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_username">andreysv1</string>
    <string name="txt_pwd">P@ssw0rd</string>
    <string name="check_rem">Remember?</string>
    <string name="title_activity_login">Login</string>
    <string name="copyright">Copyright © 2015.</string>
</resources>